<resources>
    <string name="app_name" translatable="false">PlugTimProject</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>

    <!-- LoginActivity Screen -->
    <string name="login_title">PlugTim</string>
    <string name="login_username">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_reset">Forgot your password?</string>
    <string name="login_register">Register</string>

    <!-- Menu -->
    <string name="menu_map">Map</string>
    <string name="menu_visit">Visits</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_profile">Profile</string>

    <!-- My Visits -->
    <string name="my_visits_title">My Visits</string>

    <!-- Notification -->
    <string name="notification_title">Notifications</string>
    <string name="notification_like">liked your station.</string>
    <string name="notification_photo">added a photo to your station.</string>
    <string name="notification_visit">added a visit to your station.</string>

    <!-- Profile -->
    <string name="profile_profile_btn">Edit Profile</string>
    <string name="profile_car_btn">Edit Car</string>
    <string name="profile_reset_btn">Reset password</string>
    <string name="profile_signout_btn">Signout</string>
    <string name="profile_info_message">Please contact us for any problems at <b>bogdandoru100599@gmail.com</b></string>

    <!-- Profile Info -->
    <string name="profile_info_save_btn">Save Changes</string>

    <!-- Car Info -->
    <string name="car_info_save_btn">Save Changes</string>

    <!-- Reset password -->
    <string name="reset_password_email">Email</string>
    <string name="reset_password_reset_btn">Reset Password</string>

    <!-- Visit Adapter -->
    <string name="visit_adapter_message">No message</string>

    <!-- Station Activity -->
    <string name="station_add_photo_btn">Add Photo</string>
    <string name="station_get_directions">Get Directions</string>
    <string name="station_add_visit">Add Visit</string>
    <string name="station_ports">Number of Connectors:</string>
    <string name="station_port_types">Connector Types:</string>
    <string name="station_address">Address:</string>
    <string name="station_added_by_me">Added by me</string>
    <string name="station_added_by">Added by</string>

    <!-- Visit dialog -->
    <string name="visit_dialog_title">Add Your Visit</string>
    <string name="visit_dialog_comment">Add Comment</string>
    <string name="visit_dialog_add_btn">Add</string>
    <string name="visit_dialog_close_btn">Close</string>

    <!-- Maps Fragment -->
    <string name="maps_fragment_snippet">Click for more info</string>

    <!-- Add Station Activity -->
    <string name="add_station_title">Please enter station\'s details</string>
    <string name="add_station_name">Station\'s name</string>
    <string name="add_station_nr_of_ports">Number of connectors</string>
    <string name="add_station_add_btn">Add station</string>
    <string name="add_station_upload_picture_btn">Add Photo</string>

    <!-- RegisterActivity -->
    <string name="register_info">Please add your personal details</string>
    <string name="register_username">Email</string>
    <string name="register_password">Password</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_next_btn">Next</string>

    <!-- RegisterActivity Car -->
    <string name="register_car_infos">Please add your car\'s info</string>
    <string name="register_car_year">Year</string>
    <string name="register_car_finish_btn">Finish</string>
    <string name="register_car_skip_btn">Skip</string>
    <string name="register_car_upload_picture_btn">Upload Picture</string>

    <!-- LoginActivity Messages -->
    <string name="email_required_message">Email is required</string>
    <string name="email_invalid_message">Email is invalid</string>
    <string name="password_required_message">Password is required</string>
    <string name="password_invalid_message">Password must have at least 6 characters</string>
    <string name="login_email_verification_required">Email verification hasn\'t been completed. Please check your email.</string>
    <string name="login_email_failed">Login failed. Please try again</string>

    <!-- Forgot Password Messages -->
    <string name="forgot_password_email_sent">An email has been sent to reset your password</string>
    <string name="forgot_password_wrong_email">Please add your own email.</string>
    <string name="forgot_password_info">Please enter your email and you will receive a link to reset your password.</string>

    <!-- Register Messages -->
    <string name="register_first_name_message">First Name is invalid</string>
    <string name="register_last_name_message">Last Name is invalid</string>
    <string name="register_error_message">Something went wrong. Please try again</string>
    <string name="register_send_email">A verification email has been sent. Please check your email.</string>
    <string name="register_error_register">Failed to register. Please try again</string>

    <!-- Register Car Messages -->
    <string name="register_car_year_message">Year is required</string>
    <string name="register_car_year_invalid_message">Please enter a valid year</string>
    <string name="register_car_successfully">Car has been added successfully</string>
    <string name="register_car_error">Failed to add your car. Please try again.</string>

    <!-- General Messages -->
    <string name="image_load_failed">Couldn\'t load image</string>
    <string name="general_error">Something went wrong. Please try again.</string>
    <string name="car_image_not_recognised">It doesn\'t look like a car. Please take another picture from the front of the car</string>

    <!-- Profile Info Messages -->
    <string name="profile_info_information">Your profile information</string>
    <string name="save_changes_message">Changes were saved</string>
    <string name="user_not_found">Couldn\'t get your information. Please try again</string>

    <!-- Car Info Messages -->
    <string name="car_info_information">Your car information</string>
    <string name="car_not_found">Couldn\'t get your car information. Please try again</string>
    <string name="car_info_company_required">Company name is invalid</string>
    <string name="car_info_model_required">Model name is invalid</string>
    <string name="car_info_color_required">Color is invalid</string>
    <string name="car_info_year_required">Year is invalid</string>
    <string name="like">likes</string>

    <!-- Add Station Messages -->
    <string name="add_station_exists">Station already exists</string>
    <string name="add_station_success">Station has been added successfully</string>
    <string name="add_station_failed">Failed to add your station. Please try again.</string>
    <string name="location_failed">Couldn\'t get your location</string>
    <string name="add_station_ports">Please select at least one connector</string>
    <string name="add_station_name_invalid">Please enter a valid name</string>
    <string name="add_station_ports_number_invalid">Please enter a valid number of connectors</string>
    <string name="station_image_not_recognised">It doesn\'t look like an EV Station. Please take another picture</string>

    <string name="visit_title">Add visit</string>

    <!-- Car Companies for spinner -->
    <string-array name="company">
        <item>Audi</item>
        <item>BMW</item>
        <item>Citroën</item>
        <item>Dacia</item>
        <item>DS</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Jaguar</item>
        <item>Kia</item>
        <item>Lexus</item>
        <item>Mazda</item>
        <item>Mercedes-Benz</item>
        <item>Mini</item>
        <item>Nissan</item>
        <item>Opel</item>
        <item>Peugeot</item>
        <item>Porsche</item>
        <item>Renault</item>
        <item>Škoda</item>
        <item>Smart</item>
        <item>SsangYong</item>
        <item>Tesla</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
    </string-array>

    <!-- Car Model for each company for spinner -->
    <string-array name="audi">
        <item>Q4 e-tron</item>
        <item>e-tron</item>
    </string-array>
    <string-array name="bmw">
        <item>I3</item>
        <item>IX3</item>
        <item>I4</item>
        <item>IX4</item>
    </string-array>
    <string-array name="citroen">
        <item>ë-C4</item>
    </string-array>
    <string-array name="dacia">
        <item>Spring</item>
    </string-array>
    <string-array name="ds">
        <item>3 Crossback E-Tense</item>
    </string-array>
    <string-array name="fiat">
        <item>500e</item>
    </string-array>
    <string-array name="ford">
        <item>Mustang Mach-E</item>
    </string-array>
    <string-array name="honda">
        <item>e</item>
    </string-array>
    <string-array name="hyundai">
        <item>Ioniq</item>
        <item>Kona</item>
    </string-array>
    <string-array name="jaguar">
        <item>I-Pace</item>
    </string-array>
    <string-array name="kia">
        <item>Soul EV</item>
        <item>e-Niro</item>
        <item>EV6</item>
    </string-array>
    <string-array name="lexus">
        <item>UX 300e</item>
    </string-array>
    <string-array name="mazda">
        <item>MX-30</item>
    </string-array>
    <string-array name="mercedes_benz">
        <item>EQA</item>
        <item>EQB</item>
        <item>EQC</item>
        <item>EQV</item>
        <item>EQS</item>
    </string-array>
    <string-array name="mini">
        <item>Cooper SE</item>
    </string-array>
    <string-array name="nissan">
        <item>Leaf</item>
    </string-array>
    <string-array name="opel">
        <item>Corsa-e</item>
        <item>Mokka-e</item>
    </string-array>
    <string-array name="peugeot">
        <item>e-208</item>
        <item>e-2008</item>
    </string-array>
    <string-array name="porsche">
        <item>Taycan</item>
    </string-array>
    <string-array name="renault">
        <item>Zoe</item>
        <item>Megane E-Tech Electric</item>
    </string-array>
    <string-array name="skoda">
        <item>Enyaq</item>
    </string-array>
    <string-array name="smart">
        <item>EQ ForTwo</item>
    </string-array>
    <string-array name="ssangyong">
        <item>Korando e-Motion</item>
    </string-array>
    <string-array name="tesla">
        <item>Model S</item>
        <item>Model 3</item>
        <item>Model X</item>
        <item>Model Y</item>
    </string-array>
    <string-array name="vw">
        <item>ID.3</item>
        <item>ID.4</item>
        <item>ID.5</item>
    </string-array>
    <string-array name="volvo">
        <item>XC40</item>
    </string-array>

    <string-array name="colors_en">
        <item>White</item>
        <item>Blue</item>
        <item>Gray</item>
        <item>Black</item>
        <item>Red</item>
        <item>Silver</item>
        <item>Brown</item>
        <item>Orange</item>
        <item>Green</item>
        <item>Yellow</item>
    </string-array>
</resources>