<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_map"
        android:title="@string/menu_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_pin"
        android:title="@string/menu_visit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/holder"
        android:enabled="false"
        android:title=""
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/menu_notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_account"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom" />

</menu>