<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.register.RegisterActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/kdamthmorpro_regular"
        android:text="@string/login_title"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register_infos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/register_info" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/register_infos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/register_username"
        android:inputType="textPersonName"
        tools:ignore="SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/register_password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/register_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/register_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_first_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/register_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/register_first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/register_last_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/register_first_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/register_last_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/register_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_last_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="@string/register_next_btn"
        app:cornerRadius="50dp" />


</RelativeLayout>