<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.register.ForgotPasswordActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/login_title"
        android:fontFamily="@font/kdamthmorpro_regular"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="48sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/forgot_password_email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/forgot_password_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:hint="@string/reset_password_email"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/forgot_password_send_email_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="@string/reset_password_reset_btn"
        android:textColor="@android:color/white"
        app:cornerRadius="50dp" />

    <TextView
        android:id="@+id/forgot_password_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password_send_email_btn"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password_info"
        />

</RelativeLayout>