<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.AddStation">

        <TextView
            android:id="@+id/station_add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/add_station_title" />

        <EditText
            android:id="@+id/description"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/station_add_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:hint="@string/add_station_name"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/ports"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/add_station_nr_of_ports"
            android:inputType="number"
            tools:ignore="Autofill" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ports"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:elevation="5dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/type1CheckBox"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
                    android:background="@drawable/type1"
                    android:onClick="onCheckBoxChecked"
                    tools:ignore="UsingOnClickInXml" />

                <CheckBox
                    android:id="@+id/type2CheckBox"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
                    android:background="@drawable/type2"
                    android:onClick="onCheckBoxChecked"
                    tools:ignore="UsingOnClickInXml" />

                <CheckBox
                    android:id="@+id/ccsCheckBox"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
                    android:background="@drawable/ccs"
                    android:onClick="onCheckBoxChecked"
                    tools:ignore="UsingOnClickInXml" />

                <CheckBox
                    android:id="@+id/chademoCheckBox"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
                    android:background="@drawable/chademo"
                    android:onClick="onCheckBoxChecked"
                    tools:ignore="UsingOnClickInXml" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/addStationBtnForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageAddStation"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:text="@string/add_station_add_btn"
            app:cornerRadius="50dp" />

        <Button
            android:id="@+id/addImageBtnForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:text="@string/add_station_upload_picture_btn"
            app:cornerRadius="50dp" />

        <ImageView
            android:id="@+id/imageAddStation"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/addImageBtnForm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />
    </RelativeLayout>


</ScrollView>
